powerup wasn't spawning at begin play.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.27-14.15.15
+CoopGame.TimeStamp=2020.04.27-16.14.02
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3188,9 +3188,37 @@ BP_SuperSpeedPowerup_C.Rendering=True
 BP_SuperSpeedPowerup_C.Replication=True
 BP_SuperSpeedPowerup_C.Input=True
 BP_SuperSpeedPowerup_C.Actor=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+BP_TestPickup_C.Pickup Actor=True
+REINST_BP_TestPickup_C_45.Tick=True
+REINST_BP_TestPickup_C_45.Pickup Actor=True
+REINST_BP_TestPickup_C_45.Rendering=True
+REINST_BP_TestPickup_C_45.Replication=True
+REINST_BP_TestPickup_C_45.Input=True
+REINST_BP_TestPickup_C_45.Actor=True
+REINST_BP_TestPickup_C_49.Tick=True
+REINST_BP_TestPickup_C_49.Pickup Actor=True
+REINST_BP_TestPickup_C_49.Rendering=True
+REINST_BP_TestPickup_C_49.Replication=True
+REINST_BP_TestPickup_C_49.Input=True
+REINST_BP_TestPickup_C_49.Actor=True
+REINST_BP_TestPickup_C_61.Tick=True
+REINST_BP_TestPickup_C_61.Pickup Actor=True
+REINST_BP_TestPickup_C_61.Rendering=True
+REINST_BP_TestPickup_C_61.Replication=True
+REINST_BP_TestPickup_C_61.Input=True
+REINST_BP_TestPickup_C_61.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3364,7 +3392,7 @@ CharacterMovementComponent=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPaw
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object=
+Object="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -3382,9 +3410,9 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3441,9 +3469,12 @@ REINST_BP_TrackerBot_C_53="\"Object.Components.meshComp.Object.Lighting.Lightmas
 REINST_BP_TrackerBot_C_35="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 REINST_BP_ExplosiveBarrel_C_47="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-BP_TestPickup_C="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
-SPickupActor="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
+BP_TestPickup_C=
+SPickupActor=
 REINST_BP_TestPickup_C_37="\"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
+REINST_BP_TestPickup_C_45="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
+REINST_BP_TestPickup_C_49="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
+REINST_BP_TestPickup_C_61="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
@@ -3463,8 +3494,8 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem1=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem0=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem1=/Game/Powerups/BP_SuperSpeedPowerup
 MRUItem2=/Game/Powerups/M_PowerupDecal
 MRUItem3=/Game/TrackerBot/M_TrackerBot2
 MRUItem4=/Game/TrackerBot/M_TrackerBot
@@ -3539,6 +3570,8 @@ MRUItem19=/Game/Meshes/ArcadeEditorSphereScaled
 /Game/TrackerBot/SM_TrackerBot.SM_TrackerBot=0
 /Game/TrackerBot/M_TrackerBot2.M_TrackerBot2=0
 /Game/TrackerBot/M_TrackerBot.M_TrackerBot=0
+/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup=0
+/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3580,7 +3613,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -3729,6 +3762,7 @@ CurveVisibility=SelectedCurves
 BP_Projectile_C.Shape=True
 BP_GrenadeProjectile_C.Collision=True
 StaticMeshActor.StaticMesh=False
+FbxImportUI.Mesh=True
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -3738,5 +3772,93 @@ PrimType=1
 [SelectionDetails]
 PreserveScaleRatio=True
 DecalSize_PreserveScaleRatio=True
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=True
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 
