Created PointLight function, also a material and applied it to the Super speed powerup.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.27-17.25.53
+CoopGame.TimeStamp=2020.04.27-17.30.42
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3216,9 +3216,36 @@ REINST_BP_TestPickup_C_61.Rendering=True
 REINST_BP_TestPickup_C_61.Replication=True
 REINST_BP_TestPickup_C_61.Input=True
 REINST_BP_TestPickup_C_61.Actor=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.RayTracing=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
+MaterialExpressionSine.MaterialExpressionSine=True
+MaterialExpressionSine.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+REINST_BP_MachineGun_C_85.Tick=True
+REINST_BP_MachineGun_C_85.Weapon=True
+REINST_BP_MachineGun_C_85.Rendering=True
+REINST_BP_MachineGun_C_85.Replication=True
+REINST_BP_MachineGun_C_85.Input=True
+REINST_BP_MachineGun_C_85.Actor=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3252,7 +3279,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Powerups
+ContentBrowserTab1.SelectedPaths=/Game/Powerups/Meshes
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3412,8 +3439,8 @@ SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.B
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3495,26 +3522,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem1=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem2=/Game/Powerups/M_PowerupDecal
-MRUItem3=/Game/TrackerBot/M_TrackerBot2
-MRUItem4=/Game/TrackerBot/M_TrackerBot
-MRUItem5=/Game/TrackerBot/BP_TrackerBot
-MRUItem6=/Game/TrackerBot/SM_TrackerBot
-MRUItem7=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem8=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem9=/Game/TrackerBot/Sounds/explodewarning_Cue
-MRUItem10=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem11=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem12=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem13=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem14=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem15=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem16=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem17=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem18=/Game/Meshes/SM_TrackerBot
-MRUItem19=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem0=/Game/Powerups/Meshes/SpeedIcon
+MRUItem1=/Game/Powerups/MI_PowerupSuperSpeed
+MRUItem2=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem3=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem4=/Game/Powerups/M_PowerupLightFunction
+MRUItem5=/Game/Powerups/M_SuperSpeedPowerup
+MRUItem6=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem7=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem8=/Game/Powerups/M_PowerupDecal
+MRUItem9=/Game/TrackerBot/M_TrackerBot2
+MRUItem10=/Game/TrackerBot/M_TrackerBot
+MRUItem11=/Game/TrackerBot/BP_TrackerBot
+MRUItem12=/Game/TrackerBot/SM_TrackerBot
+MRUItem13=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem14=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem15=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem16=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem18=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem19=/Game/Blueprints/Weapons/BP_Rifle
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3573,6 +3600,9 @@ MRUItem19=/Game/Meshes/ArcadeEditorSphereScaled
 /Game/TrackerBot/M_TrackerBot.M_TrackerBot=0
 /Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup=0
 /Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup=0
+/Game/Powerups/MI_PowerupSuperSpeed.MI_PowerupSuperSpeed=0
+/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel=0
+/Game/Powerups/Meshes/SpeedIcon.SpeedIcon=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
