Created Health regeneration powerup in blueprint.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3243,10 +3243,18 @@ REINST_BP_MachineGun_C_85.Input=True
 REINST_BP_MachineGun_C_85.Actor=True
 MaterialExpressionFresnel.MaterialExpressionFresnel=True
 MaterialExpressionFresnel.MaterialExpression=True
+BP_HealthRegenerationPowerup_C.Tick=True
+BP_HealthRegenerationPowerup_C.Powerup=True
+BP_HealthRegenerationPowerup_C.Rendering=True
+BP_HealthRegenerationPowerup_C.Replication=True
+BP_HealthRegenerationPowerup_C.Input=True
+BP_HealthRegenerationPowerup_C.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup
+OpenAssetsAtExit=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3279,7 +3287,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Powerups/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Powerups
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3523,25 +3531,25 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem1=/Game/Powerups/Meshes/SpeedIcon
-MRUItem2=/Game/Powerups/MI_PowerupSuperSpeed
-MRUItem3=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem4=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem5=/Game/Powerups/M_PowerupLightFunction
-MRUItem6=/Game/Powerups/M_SuperSpeedPowerup
-MRUItem7=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem8=/Game/Powerups/M_PowerupDecal
-MRUItem9=/Game/TrackerBot/M_TrackerBot2
-MRUItem10=/Game/TrackerBot/M_TrackerBot
-MRUItem11=/Game/TrackerBot/BP_TrackerBot
-MRUItem12=/Game/TrackerBot/SM_TrackerBot
-MRUItem13=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem14=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem15=/Game/TrackerBot/Sounds/explodewarning_Cue
-MRUItem16=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem18=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem19=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem1=/Game/Powerups/MI_HealthRegeneration
+MRUItem2=/Game/Powerups/M_Powerup
+MRUItem3=/Game/Powerups/MI_PowerupSuperSpeed
+MRUItem4=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem5=/Game/Powerups/Meshes/SpeedIcon
+MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem7=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem8=/Game/Powerups/M_PowerupLightFunction
+MRUItem9=/Game/Powerups/M_SuperSpeedPowerup
+MRUItem10=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem11=/Game/Powerups/M_PowerupDecal
+MRUItem12=/Game/TrackerBot/M_TrackerBot2
+MRUItem13=/Game/TrackerBot/M_TrackerBot
+MRUItem14=/Game/TrackerBot/BP_TrackerBot
+MRUItem15=/Game/TrackerBot/SM_TrackerBot
+MRUItem16=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem17=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem18=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem19=/Game/TrackerBot/Sounds/TrackerBotAttenuation
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3603,6 +3611,8 @@ MRUItem19=/Game/Blueprints/Weapons/BP_Rifle
 /Game/Powerups/MI_PowerupSuperSpeed.MI_PowerupSuperSpeed=0
 /Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel=0
 /Game/Powerups/Meshes/SpeedIcon.SpeedIcon=0
+/Game/Powerups/M_Powerup.M_Powerup=0
+/Game/Powerups/MI_HealthRegeneration.MI_HealthRegeneration=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3684,6 +3694,7 @@ bUseUnsortedMenus=False
 
 [SuppressableDialogs]
 Warning_CompileErrorsInMaterial=False
+Warning_NoPreviewMeshFound=False
 
 [MaterialEditor]
 PrimType=1
@@ -3798,7 +3809,7 @@ FbxImportUI.Mesh=True
 [MaterialInstanceEditor]
 bShowGrid=False
 bDrawGrid=False
-PrimType=1
+PrimType=0
 
 [SelectionDetails]
 PreserveScaleRatio=True
