Allowed to change powerup in instances of the pickup actor.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.27-18.30.02
+CoopGame.TimeStamp=2020.04.27-23.58.14
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3251,10 +3251,8 @@ BP_HealthRegenerationPowerup_C.Input=True
 BP_HealthRegenerationPowerup_C.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup
-OpenAssetsAtExit=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3530,11 +3528,11 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem1=/Game/Powerups/MI_HealthRegeneration
-MRUItem2=/Game/Powerups/M_Powerup
-MRUItem3=/Game/Powerups/MI_PowerupSuperSpeed
-MRUItem4=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem0=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem1=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem2=/Game/Powerups/MI_HealthRegeneration
+MRUItem3=/Game/Powerups/M_Powerup
+MRUItem4=/Game/Powerups/MI_PowerupSuperSpeed
 MRUItem5=/Game/Powerups/Meshes/SpeedIcon
 MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
 MRUItem7=/Game/Blueprints/Weapons/BP_MachineGun
