adapted the powerups to rotate.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3250,10 +3250,22 @@ BP_HealthRegenerationPowerup_C.Replication=True
 BP_HealthRegenerationPowerup_C.Input=True
 BP_HealthRegenerationPowerup_C.Actor=True
 BP_HealthRegenerationPowerup_C.Default=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Sockets=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+RotatingMovementComponent.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup
+OpenAssetsAtExit=/Game/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3427,7 +3439,7 @@ BP_SuperSpeedPowerup_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+Object=
 BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -3447,7 +3459,7 @@ SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.Bo
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3499,7 +3511,7 @@ STrackerBot=
 REINST_BP_TrackerBot_C_56="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression=
+MaterialExpression="\"Object.DefaultValue\" "
 REINST_BP_TrackerBot_C_53="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 REINST_BP_TrackerBot_C_35="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
@@ -3510,6 +3522,7 @@ REINST_BP_TestPickup_C_37="\"Object.Components.decalComp\" \"Object.Components.d
 REINST_BP_TestPickup_C_45="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 REINST_BP_TestPickup_C_49="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 REINST_BP_TestPickup_C_61="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
+MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
@@ -3529,9 +3542,9 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem1=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem2=/Game/Powerups/MI_HealthRegeneration
+MRUItem0=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem1=/Game/Powerups/MI_HealthRegeneration
+MRUItem2=/Game/Powerups/BP_HealthRegenerationPowerup
 MRUItem3=/Game/Powerups/M_Powerup
 MRUItem4=/Game/Powerups/MI_PowerupSuperSpeed
 MRUItem5=/Game/Powerups/Meshes/SpeedIcon
@@ -3612,6 +3625,7 @@ MRUItem19=/Game/TrackerBot/Sounds/TrackerBotAttenuation
 /Game/Powerups/Meshes/SpeedIcon.SpeedIcon=0
 /Game/Powerups/M_Powerup.M_Powerup=0
 /Game/Powerups/MI_HealthRegeneration.MI_HealthRegeneration=0
+/Game/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
